# fuzzball-synth

./: README
args-count/: README
args-count/libc-proto/: .gitignore  README  count-results.pl  error-notes.txt  libc-proto.pl  one-func.c
concrete_adaptor_search/: two-funcs.c  two-funcs.h
eg/: README.md
eg/arithmetic/: arithmetic.c  arithmetic64.c  arithmetic_float.c  parse_results.py  run_tests.sh  stp-wrapper  synth.ml  synth64.ml  synth_float.ml
eg/arm/: Makefile  adaptor_types.h  all_adapters_absdiff.h  all_adapters_ref10.h  all_adapters_ref12.h  all_adapters_ref14.h  all_adapters_ref15.h  all_adapters_ref17.h  all_adapters_ref18.h  all_adapters_ref23.h  all_adapters_ref25.h  all_adapters_ref5.h  all_adapters_ref6.h  all_adapters_ref7.h  all_adapters_render.h  all_adapters_tilepos.h  arith-utils.h  base-dirs-clamp.lst  base-dirs.lst  base_dirs.lst  calc_num_adaptors.c  clamp_adapter_clusters.lst  clamp_adapter_clusters.lst.filtered  clamp_adapters.lst  cluster-adapters.cpp  constant-bounds.lst  create-fragment-args.pl  create-fragments.pl  create_fragments.pl  find-fragments.pl  find-small-inline-func.pl  find-unique-adapted-fragments.pl  find-unique-adaptors.pl  inner_funcs.c  ref13_clusters.lst  ref23_clusters.lst  ref6_clusters.lst  ref_test.c  remove-sp-lr-fragments.pl  report-metrics.pl  (+21 more)
eg/rc4enc_conc/: .gitignore  CMakeLists.txt  SignalHandlers.h  ce-search-rc4enc.c  functions.h  generate_adaptors.h  generate_struct_adaptors.h  struct_adaptor.c  synth-conc-rc4-enc.pl  synth-conc-simple-struct.pl  two-funcs-conc-rc4enc.c  two-funcs-conc.c
(+480 files in other folders)
